# Deteccao-e-Reconhecimento-Facial

./: CMakeCache.txt  CMakeLists.txt  Makefile  Piloto.cpp  README.md  cmake_install.cmake  dados.txt
entrada/: imgtag.txt
saida/: dados.txt
